<resources>
    <string name="app_name">Notesy</string>

    <string name="note_title_hint">Title</string>
    <string name="note_description_hint">Description</string>
    <string name="note_reminder_hint">Set a Reminder</string>
    <string name="note_image_hint">Add an image</string>
    <string name="add_note_title">Add Note</string>

    <string name="title">Title</string>
    <string name="Description">Description</string>
    <string name="reminder_text">Reminder Set</string>
    <string name="created_text">Created On</string>

    <string name="admob_banner_Ad">ca-app-pub-xxxxxxxxxxxxxx/xxxxxxxx</string>
    <string name="appwidget_text">Notesy Widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
