<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.varunjoshi.notesy.activity.NewNoteActivity">


    <EditText
        android:id="@+id/edt_noteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/note_title_hint"
        android:inputType="text|textCapSentences"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_title" />

    <EditText
        android:id="@+id/edt_noteDescription"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/note_description_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_noteTitle" />

    <TextView
        android:id="@+id/text_reminder"
        android:layout_width="95dp"
        android:layout_height="0dp"
        android:layout_marginEnd="156dp"
        android:layout_marginStart="16dp"
        android:text="@string/note_reminder_hint"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch_reminder"
        app:layout_constraintEnd_toStartOf="@+id/switch_reminder"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_noteDescription" />

    <TextView
        android:id="@+id/text_addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/note_image_hint"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/select_image"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder" />



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_saveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#4CAF50"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fab_deleteNote"
        app:srcCompat="@drawable/ic_tick" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_deleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#B71C1C"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_saveNote"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_delete" />

    <TextView
        android:id="@+id/add_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_note_title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
