<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.varunjoshi.notesy.activity.NewNoteActivity">


    <ImageView
        android:id="@+id/note_bg"
        android:layout_width="298dp"
        android:layout_height="355dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/fab_saveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/white_rec" />

    <EditText
        android:id="@+id/edt_noteTitle"
        android:layout_width="256dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/note_title_hint"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/note_bg"
        app:layout_constraintStart_toStartOf="@+id/note_bg"
        app:layout_constraintTop_toTopOf="@+id/note_bg" />

    <EditText
        android:id="@+id/edt_noteDescription"
        android:layout_width="255dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/note_description_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollHorizontally="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="@+id/note_bg"
        app:layout_constraintStart_toStartOf="@+id/note_bg"
        app:layout_constraintTop_toBottomOf="@+id/edt_noteTitle" />

    <TextView
        android:id="@+id/text_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/note_reminder_hint"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch_reminder"
        app:layout_constraintEnd_toStartOf="@+id/switch_reminder"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="@+id/note_bg" />

    <Switch
        android:id="@+id/switch_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/note_bg"
        app:layout_constraintTop_toBottomOf="@+id/edt_noteDescription" />

    <TextView
        android:id="@+id/text_addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/note_image_hint"
        app:layout_constraintEnd_toStartOf="@+id/select_image"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="@+id/note_bg"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder" />

    <ImageView
        android:id="@+id/select_image"
        android:layout_width="23dp"
        android:layout_height="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/note_bg"
        app:layout_constraintTop_toBottomOf="@+id/switch_reminder"
        app:srcCompat="@drawable/ic_select_image" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_saveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_tick" />


</android.support.constraint.ConstraintLayout>
